# GeoRisk-AI-Copilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  project_config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  schemas.py  security.py  services.py
data/processed/: train_env_v1.csv  train_nuclide_v1.csv
docs/: api_examples.md  architecture.md  model_comparison.md  troubleshooting.md
frontend/: streamlit_app.py
ml/: __init__.py  artifact.py  config.py  data.py  explain.py  features.py  geospatial.py  predict.py  train.py
ml/classic/: __init__.py  compare_models.py  feature_sets.py  model_registry.py  predict.py  spatial_cv.py  train.py
rag/: __init__.py  config.py  ingest.py  llm.py  qa.py  store.py  text.py
tests/: conftest.py  test_api.py  test_classic_pipeline.py  test_ml_pipeline.py  test_rag.py
