[project]
name = "georisk-ai-copilot"
version = "0.1.0"
description = "Production-style AI Engineer portfolio project for environmental and radiation risk analysis."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
